more added to css

--- a/style.css
+++ b/style.css
@@ -33,6 +33,13 @@ body {
 .proba {
   color:orange;
 }
+
+
+/* shortcode */
+.someone_sc {
+  color:purple;
+}
+
 /* styling of right buttons *
 /* just testing */
 /* footer */
