--- a/style.css
+++ b/style.css
@@ -6,13 +6,52 @@ Version: 1.0
 
 /* colors */
 
+/* fonts */
+
 @font-face {
     font-family: Museo;
-    src: url("/assets/fonts/");
+    src: url("/assets/fonts/MuseoSansRounded-100.otf") format("opentype");
+    font-weight:100;
 }
+
+@font-face {
+    font-family: Museo;
+    src: url("/assets/fonts/MuseoSansRounded-100.otf") format("opentype");
+    font-weight:300;
+}
+
+@font-face {
+    font-family: Museo;
+    src: url("/assets/fonts/MuseoSansRounded-100.otf") format("opentype");
+    font-weight:500;
+}
+
+@font-face {
+    font-family: Museo;
+    src: url("/assets/fonts/MuseoSansRounded-100.otf") format("opentype");
+    font-weight:700;
+}
+
+@font-face {
+    font-family: Museo;
+    src: url("/assets/fonts/MuseoSansRounded-100.otf") format("opentype");
+    font-weight:900;
+}
+
+@font-face {
+    font-family: Museo;
+    src: url("/assets/fonts/MuseoSansRounded-100.otf") format("opentype");
+    font-weight:1000;
+}
+
 
 body {
   font-family: Museo, Arial, sans-serif;
+  font-weight:100;
+}
+
+h1 {
+  font-family:Museo, Arial, sans-serif;
 }
 
 .post-content {
@@ -22,7 +61,7 @@ body {
 .post-content p {
   font-size: 20px;
   font-weight: bold;
-  color: #F00;
+  color:#000;
 }
 
 .post-content img  {
