--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,18 +144,18 @@ header .custom-logo-link img {
 }
 
 /* site title/head */
-.header-post {
-  padding: 150px auto;
-}
-
-.container {
-  text-align: center;
+.post-header {
+  padding: 150px 0;
 }
 
 .site-title {
-  padding: auto;
+  text-align: center;
   color: #dc4ba3;
   font-weight: 200;
+}
+
+.form-wrapper {
+  text-align: center;
 }
 
 .search-submit {
@@ -167,14 +167,23 @@ header .custom-logo-link img {
   border: 0px;
 }
 
+.title a{
+  color: #555555;
+  margin-bottom: 30px;
+}
+
+.title a:hover{
+  color: #dc4ba3;
+  text-decoration: none;
+}
+
 .post-content {
   padding: 0 10rem;
 }
 
 .post-content p {
   font-size: 20px;
-  font-weight: bold;
-  color: #000;
+  color: #555555;
 }
 
 .post-content img  {
@@ -182,18 +191,9 @@ header .custom-logo-link img {
   width: 100%;
 }
 
-.proba {
-  color:orange;
-}
-
 .favs .comments {
   color:grey;
   display: inline;
-}
-
-
-.shortstyle1 {
-  color:red;
 }
 
 .left-custom-quote {
@@ -203,10 +203,77 @@ header .custom-logo-link img {
   text-align:right;
 }
 
-.footer-logo {
+/* Tags */
+
+.tags {
 
 }
 
+.tag {
+  color: #999999;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  padding: 3px 5px;
+  margin-left: 5px;
+}
+
+.tag:hover {
+  color: #555555;
+  text-decoration: none;
+}
+
+/* faves and comments */
+
+.favs .comments {
+  display: inline;
+  margin-left: 30px;
+}
+
+/* Load more button */
+
+.read-more a{
+  color: ##dc4ba3;
+}
+
+.load-more-container {
+  text-align:center;
+}
+
+#load_more {
+  background-color: #dc4ba3;
+  color: #fff;
+  padding: 10px 40px;
+  font-size: 18px;
+  margin-bottom: 60px;
+}
+
+
+/* Footer */
+
+footer {
+  background-color: #f4f4f4;
+  border-top: 1px solid #d8d8d8;
+  padding: 50px;
+}
+
+.footer-logo .custom-logo-link {
+  width: 180px;
+  display: inline-flex;
+}
+
+.footer-social {
+  text-align: right;
+}
+
+}
+.footer-logo {
+  text-align: left;
+}
+
+.footer-logo .custom-logo-link img {
+  height: auto;
+  width: 100%;
+}
 .copyright {
   text-align: left;
 }
@@ -214,6 +281,37 @@ header .custom-logo-link img {
 .footer-social {
   list-style-type: none;
 }
-/* styling of right buttons *
-/* just testing */
-/* footer */
+
+.footer-social-uniduck{
+  color: #dc4ba3;
+}
+
+/* block post */
+
+.line-post .att-image {
+  height: 0;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 56.25%;
+  margin-bottom: 20px;
+}
+
+.line-post .att-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  object-position: center;
+}
+
+
+.featured {
+  margin-bottom: 60px;
+}
+
+.line-post.featured .att-image {
+  width: 47%;
+  margin-right: 3%;
+  float: left;
+  padding-bottom: calc(56.25% / 2);
+}
