--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,9 @@ body {
   font-family: Museo, Arial, sans-serif;
   font-weight:100;
 }
+a:hover {
+  color: #b03c82;
+}
 
 h1 {
   font-family:Museo, Arial, sans-serif;
@@ -65,6 +68,10 @@ h1 {
 }
 
 /* header */
+
+header {
+  padding: 20px 0;
+}
 
 header .custom-logo-link {
   width: 180px;
@@ -151,6 +158,7 @@ header .custom-logo-link img {
 .site-title {
   text-align: center;
   color: #dc4ba3;
+  font-size: 48px;
   font-weight: 200;
 }
 
@@ -165,6 +173,16 @@ header .custom-logo-link img {
 
 .search-field {
   border: 0px;
+  width: 120px;
+}
+
+.search-field:focus {
+  outline: none;
+}
+
+.att-date {
+  color: #b3b3b3;
+  font-weight: 300;
 }
 
 .title a{
@@ -186,22 +204,59 @@ header .custom-logo-link img {
   color: #555555;
 }
 
-.post-content img  {
+.post-content figure {
   margin: 0 -10rem;
+}
+
+.post-content img  {
+  width: 100%;
+  height: auto;
+}
+
+.post-content .youtube-video {
+  margin: 40px -10rem;
+}
+
+.post-content .youtube-video .youtube-video-inner {
+  position: relative;
+  height: 0;
+  padding-bottom: 56.25%;
+  overflow: hidden;
+}
+
+.post-content .youtube-video .youtube-video-inner iframe {
+  position: absolute;
+  height: 100%;
   width: 100%;
 }
 
-.favs .comments {
-  color:grey;
-  display: inline;
+.quote-wrapper,
+.quote-wrapper-left,
+.quote-wrapper-right {
+    width: 60%;
+    font-size: 2rem;
+    color: #dc4ba3;
+    padding: 10px 30px;
+    text-align: center;
+    font-weight: 300;
 }
 
-.left-custom-quote {
-  text-align: left;
+.quote-wrapper {
+  margin: 0 auto;
 }
-.right-custom-quote {
-  text-align:right;
+
+.quote-wrapper-left {
+  margin-left: -10rem;
+  float: left;
+  margin-right: 20px;
 }
+
+.quote-wrapper-right {
+  margin-right: -10rem;
+  float: right;
+  margin-left: 20px;
+}
+
 
 /* Tags */
 
@@ -214,7 +269,8 @@ header .custom-logo-link img {
   background-color: #f0f0f0;
   border-radius: 5px;
   padding: 3px 5px;
-  margin-left: 5px;
+  margin-left: 8px;
+  font-weight: 300;
 }
 
 .tag:hover {
@@ -224,9 +280,18 @@ header .custom-logo-link img {
 
 /* faves and comments */
 
-.favs .comments {
-  display: inline;
-  margin-left: 30px;
+.social {
+  margin-bottom: 30px;
+}
+
+.social span {
+  margin-right: 20px;
+  color: #b3b3b3;
+  font-weight: 300;
+}
+
+.social span i {
+  margin-right: 10px;
 }
 
 /* Load more button */
@@ -292,7 +357,7 @@ footer {
   height: 0;
   overflow: hidden;
   position: relative;
-  padding-bottom: 56.25%;
+  padding-bottom: 75%;
   margin-bottom: 20px;
 }
 
@@ -314,4 +379,101 @@ footer {
   margin-right: 3%;
   float: left;
   padding-bottom: calc(56.25% / 2);
+}
+
+.head-img {
+  width: 100vw;
+  height:400px;
+}
+
+.read-more  {
+  color: #dc4ba3;
+}
+
+.footer-social-uniduck {
+  color: #dc4ba3;
+}
+
+/* full post */
+
+.full-post {
+
+}
+
+.full-post-header {
+  height: 550px;
+  width: 100%;
+  margin-bottom: 50px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.full-post-header img {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.full-post-header .img-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 0;
+}
+
+.full-post-header-content {
+  position: relative;
+  z-index: 1;
+  color: #FFF;
+}
+
+.full-post-header-content h1 {
+  font-size: 64px;
+}
+
+.full-post-header .att-author {
+  text-align: center;
+}
+
+.att-author {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.att-author i {
+  margin-right: 6px;
+}
+
+.full-post-header .back-link {
+  position: absolute;
+  bottom: 5px;
+}
+
+ .back-link {
+   color: #fff;
+   font-size: 18px;
+   font-weight: 300;
+   margin-bottom: 20px;
+ }
+
+ .back-link:a {
+   text-decoration: none;
+ }
+
+.alignnone {
+  margin: 40px 0;
+}
+
+.post-content p a {
+  color: #dc4ba3;
+}
+
+.navbar-toggler-icon{
+  color: #000;
 }
