--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,3 +477,41 @@ footer {
 .navbar-toggler-icon{
   color: #000;
 }
+
+.more-magic {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 500;
+  color: #dc4ba3;
+  margin: 40px auto;
+}
+
+.rel-image {
+  height: 0;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 75%;
+  margin-bottom: 20px;
+}
+
+.rel-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  object-position: center;
+}
+
+.rel-title {
+  font-size: 24px;
+  color: #000;
+  font-weight: 300;
+}
+
+.rel-title:hover {
+  color: #dc4ba3;
+}
+
+.rel-read-more {
+  color: #dc4ba3;
+}
